tests/http/requests/invalid/009.py
from web_server.errors import LimitRequestHeaders

request = LimitRequestHeaders
